--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
     - docker build -t xenonpluton/docker-react -f Dockerfile.dev .
 
     script: 
-        - docker run -e CI=true xenonpluton/docker-react npm run test
+        - docker run -e CI=true xenonpluton/docker-react npm run test -- -- coverage
