--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
     - docker build -t xenonpluton/docker-react -f Dockerfile.dev .
 
     script: 
-        - docker run -e CI=true xenonpluton/docker-react npm run test -- --coverage
+        - docker run -e CI=true xenonpluton/docker-react npm run test
