--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,16 @@ before_install:
 
 script: 
     - docker run -e CI=true xenonpluton/docker-react npm run test -- --coverage
+
+deploy:
+    provider: elasticbeanstalk
+    region: "us-east-2"
+    app: "DockerOhio"
+    env: "Dockerohio-env"
+    bucket_name: "elasticbeanstalk-us-east-2-867256822293"
+    bucket_path: "DockerOhio"
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+        secure: "$AWS_SECRET_KEY"
+
